--- a/part1/ch03/ch03_Introductory_Examples.ipynb
+++ b/part1/ch03/ch03_Introductory_Examples.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2b86e5431641633556219d21c12f1c37f18a089f3c575177aab5ddc52ce559d3"
+  "signature": "sha256:a22bc9596fb198fc8b321bc4f9b962eb2ff44e02f0c570f8daf0a9d9462ead8a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -71,14 +71,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-1.png' />"
+      "<img src='figures/eq3-1.png' width=600 />"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-1-means.png' />"
+      "<img src='figures/eq3-1-means.png' width=600 />"
      ]
     },
     {
@@ -149,14 +149,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-2.png' />"
+      "<img src='figures/eq3-2.png' width=600 />"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-3.png' />"
+      "<img src='figures/eq3-3.png' width=600 />"
      ]
     },
     {
@@ -205,7 +205,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-4.png' />"
+      "<img src='figures/eq3-4.png' width=600 />"
      ]
     },
     {
@@ -863,7 +863,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-5.png' />"
+      "<img src='figures/eq3-5.png'width=600 />"
      ]
     },
     {
@@ -878,7 +878,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-6.png' />"
+      "<img src='figures/eq3-6.png' width=600 />"
      ]
     },
     {
@@ -918,14 +918,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/mc_steps.png' />"
+      "<img src='figures/mc_steps.png' width=600 />"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-7.png' />"
+      "<img src='figures/eq3-7.png' width=600 />"
      ]
     },
     {
@@ -1056,7 +1056,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eg_vec.png' width=300 />"
+      "<img src='figures/eg_vec.png' width=400 />"
      ]
     },
     {
@@ -1202,7 +1202,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='figures/eq3-8.png' />"
+      "<img src='figures/eq3-8.png' width=600 />"
      ]
     },
     {
