--- a/part1/ch03/ch03_Introductory_Examples.ipynb
+++ b/part1/ch03/ch03_Introductory_Examples.ipynb
@@ -32,9 +32,12 @@
       "## \ucc38\uace0\uc790\ub8cc \n",
       "\n",
       "* \ube14\ub799-\uc204\uc988 \ubaa8\ud615\n",
+      " - \ucf5c\uc635\uc158 - http://www.shinhaninvest.com/edu/invest/fut/Invest_fut02_08.htm\n",
       " - \uae08\uc735\uacf5\ud559_\uac15\uc758\ub178\ud2b8_\uae40\uc8fc\ucca0\uad50\uc218\ub2d8_Part I.pdf- http://blog.sunghwanyoo.com/attachment/1017639105.pdf \n",
       " - The Black-Scholes Options Pricing Model - http://www2.hmc.edu/~evans/e136l9.pdf\n",
       " - Derivation of Black-Scholes equation \ube14\ub799-\uc204\uc988 \ubc29\uc815\uc2dd \uc720\ub3c4\uacfc\uc815 - http://infonet.gist.ac.kr/wp-content/uploads/members/Derivation_of_Black_Scholes_equation.pdf\n",
+      "* Implied Volatilities (\ub0b4\uc7ac \ubcc0\ub3d9\uc131)\n",
+      " - http://www.shinhaninvest.com/edu/invest/fut/Invest_fut02_07.htm\n",
       "* Monte-Carlo Method\n",
       " - Monte-Carlo Method - http://www.slideshare.net/shishirkawde/monte-carlo-10417129\n",
       " - Monte-carlo simulation and the black scholes model - http://www.slideserve.com/ivan-russell/monte-carlo-simulation-and-the-black-scholes-model"
