--- a/part1/ch03/ch03_Introductory_Examples.ipynb
+++ b/part1/ch03/ch03_Introductory_Examples.ipynb
@@ -1083,6 +1083,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# list\n",
       "v = range(1, 6)\n",
       "print v"
      ],
@@ -1118,6 +1119,48 @@
       }
      ],
      "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# numpy's ndarray\n",
+      "v = np.arange(1,6)\n",
+      "v"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "array([1, 2, 3, 4, 5])"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "2 * v"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "array([ 2,  4,  6,  8, 10])"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
