--- a/part1/ch09/ch9_Mathematical_Tools.ipynb
+++ b/part1/ch09/ch9_Mathematical_Tools.ipynb
@@ -37,6 +37,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font color=\"red\">Since the arrival of the so-called Rocket Scientists on Wall Street in the '80s and '90s finance has evolved into a discipline of applied mathematics</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Approximation"
    ]
   },
@@ -46,6 +53,13 @@
    "source": [
     "* Regression\n",
     "* Interpolation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regression and interpolation are among the most often used numerical techniques in finace."
    ]
   },
   {
@@ -286,6 +300,27 @@
     "* Noisy Data\n",
     "* Unsorted data\n",
     "* Multiple dimensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Equation 9-1. Minimization problem of regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/eq9.1.png\" width=600 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/tbl9.1.png\" width=600 />"
    ]
   },
   {
@@ -5473,6 +5508,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/tbl9.2.png\" width=600 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/tbl9.3-1.png\" width=600 />\n",
+    "<img src=\"figures/tbl9.3-2.png\" width=600 />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
@@ -6357,6 +6407,13 @@
     "* Global Optimization\n",
     "* Local Optimization\n",
     "* Constrained Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A number of financial disciplies need tools for convex optimization (e.g., optoin pricing when it comes to model calibation)."
    ]
   },
   {
@@ -8434,6 +8491,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/eq9.2.png\" width=600 />\n",
+    "<img src=\"figures/eq9.3.png\" width=600 />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
@@ -8573,6 +8638,20 @@
    "source": [
     "* Numerical Integration\n",
     "* Integration by Simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In particular, the valuation of financial (derivate) assets often boild down to the evaluation of integrals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/eq9.4.png\" width=600 />"
    ]
   },
   {
@@ -9097,6 +9176,13 @@
     "* Equations\n",
     "* Integration\n",
     "* Differentiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python provides with Sympy a powerful tool for symbolic mathematics, e.g., to solve (sysems of) equations."
    ]
   },
   {
